Events Card size changed on mobile to take 90% adn also horizontal scroll bug removed from Event Cards

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -39,10 +39,13 @@ $theme-colors: (
 }
 
 .eventBox {
-  min-width: 250px;
+  min-width: 260px;
   margin: " 10px 10px";
-  overflow-y: scroll;
+  overflow-y: hidden;
   position: relative;
+  @media only screen and (max-width: 400px) {
+    min-width: 38vh;
+  }
 }
 td {
   vertical-align: middle;
@@ -92,3 +95,44 @@ td {
     z-index: 0;
   }
 }
+
+// .scrollbar {
+//   overflow: overlay;
+// }
+
+// /* total width */
+// .scrollbar::-webkit-scrollbar {
+//   background-color: rgba(0, 0, 0, 0);
+//   width: 16px;
+//   height: 16px;
+//   z-index: 999999;
+// }
+
+// /* background of the scrollbar except button or resizer */
+// .scrollbar::-webkit-scrollbar-track {
+//   background-color: rgba(0, 0, 0, 0);
+// }
+
+// /* scrollbar itself */
+// .scrollbar::-webkit-scrollbar-thumb {
+//   background-color: rgba(0, 0, 0, 0);
+//   border-radius: 16px;
+//   border: 0px solid #fff;
+// }
+
+// /* set button(top and bottom of the scrollbar) */
+// .scrollbar::-webkit-scrollbar-button {
+//   display: none;
+// }
+
+// /* scrollbar when element is hovered */
+// .scrollbar:hover::-webkit-scrollbar-thumb {
+//   background-color: #a0a0a5;
+//   border: 4px solid #fff;
+// }
+
+// /* scrollbar when scrollbar is hovered */
+// .scrollbar::-webkit-scrollbar-thumb:hover {
+//   background-color: #a0a0a5;
+//   border: 4px solid #f4f4f4;
+// }
